--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,4 +1,4 @@
 mountpoints:
   /:
-    url: https://content.da.live/aemsites/da-block-collection/
+    url: https://content.da.live/noormd08/da-test/
     type: markup
